moved css around and possibly fixed overflow things

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,15 @@
 @import "intvstyle.scss";
 
-html {
-    overflow: hidden;
-}
-
 body {
     height: 100vh;
     perspective: 30em;
+}
+
+#wrapper {
+    overflow: hidden;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
 }
 
 #logo {
